[package]
name = "hmc-datastore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"

juniper = { version = "0.15", features = ["expose-test-schema"] }
warp = "0.3"
juniper_warp = "0.7.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
